objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>AccountEID__c</fullName>
        <formula>Account__r.AccountEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountHierarchyMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Hierarchy Member</label>
        <referenceTo>AccountHierarchyMember__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to which this location belongs.</description>
        <inlineHelpText>The account to which this location belongs.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CityName__c</fullName>
        <description>The location&apos;s city.</description>
        <inlineHelpText>The location&apos;s city.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLocationID__c</fullName>
        <description>Identifier, usually numeric, used by the client to specify this location.</description>
        <externalId>true</externalId>
        <inlineHelpText>Identifier, usually numeric, used by the client to specify this location.</inlineHelpText>
        <label>Client Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedRecentlyBitFormula__c</fullName>
        <description>Whether the store was closed within the past ninety days.</description>
        <formula>if(  EndDate__c &gt;= TODAY() - 91, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether the store was closed within the past ninety days.</inlineHelpText>
        <label>Closed Recently Bit Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location county</description>
        <inlineHelpText>The location county</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date that this location shut its doors and went out of business.</description>
        <inlineHelpText>The date that this location shut its doors and went out of business.</inlineHelpText>
        <label>Location Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FaxCode__c</fullName>
        <description>The location fax number.</description>
        <inlineHelpText>The location fax number.</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FictitiousBusinessName__c</fullName>
        <description>The fictitious business name that this location is doing business as.</description>
        <inlineHelpText>The fictitious business name that this location is doing business as.</inlineHelpText>
        <label>DBA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE1LocationId__c</fullName>
        <description>The branch id from IE 1</description>
        <inlineHelpText>The branch id from IE 1</inlineHelpText>
        <label>IE1LocationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IE2LocationId__c</fullName>
        <description>The branch id from IE 2</description>
        <inlineHelpText>The branch id from IE 2</inlineHelpText>
        <label>IE2LocationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatitudeCode__c</fullName>
        <description>The latitude of a location&apos;s address.</description>
        <inlineHelpText>The latitude of a location&apos;s address.</inlineHelpText>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationEID__c</fullName>
        <description>The Enterprise ID for this Location.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Location.</inlineHelpText>
        <label>Location EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LocationNameFormula__c</fullName>
        <formula>Blankvalue(FictitiousBusinessName__c , Blankvalue ( Account__r.ShortName__c ,  Account__r.Name ))
+ &apos; &apos; +
if(
    isblank(ClientLocationID__c ), 
    if(not(isblank(FictitiousBusinessName__c )), &apos;: &apos;, &apos;&apos;) + Name, 
    if(not(isblank(FictitiousBusinessName__c )), &apos; &apos;, &apos;&apos;) + &apos;Store #&apos; + ClientLocationID__c 
)
+ &apos; on &apos; + UPPER(StreetAddressText__c  + &apos;, &apos; +  CityName__c  + &apos;, &apos; + State__r.StateAbbr__c  + &apos; &apos; +  LEFT(ZipCode__c,5) )</formula>
        <label>Location Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongitudeCode__c</fullName>
        <description>The longitude of a location&apos;s address.</description>
        <inlineHelpText>The longitude of a location&apos;s address.</inlineHelpText>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenedRecentlyBitFormula__c</fullName>
        <description>Whether the store was opened within the past ninety days.</description>
        <formula>if(  StartDate__c &gt;= TODAY() - 91, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether the store was opened within the past ninety days.</inlineHelpText>
        <label>Opened Recently Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneCode__c</fullName>
        <description>The location phone number.</description>
        <inlineHelpText>The location phone number.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SF1LocationId__c</fullName>
        <description>The location id from the old SF</description>
        <inlineHelpText>The location id from the old SF</inlineHelpText>
        <label>SF1LocationID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The opening date of this location, when it first started hiring employees.</description>
        <inlineHelpText>The opening date of this location, when it first started hiring employees.</inlineHelpText>
        <label>Location Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location state</description>
        <inlineHelpText>The location state</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StreetAddressText__c</fullName>
        <description>The location street address</description>
        <inlineHelpText>The location street address</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>The location zip</description>
        <inlineHelpText>The location zip</inlineHelpText>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FictitiousBusinessName__c</columns>
        <columns>ClientLocationID__c</columns>
        <columns>CityName__c</columns>
        <columns>StreetAddressText__c</columns>
        <columns>ZipCode__c</columns>
        <columns>IE2LocationId__c</columns>
        <columns>PhoneCode__c</columns>
        <columns>FaxCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Laura_Locations</fullName>
        <columns>NAME</columns>
        <columns>ClientLocationID__c</columns>
        <columns>CityName__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>Laura&apos;s Locations</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>neededBy__c</fullName>
        <label>neededBy</label>
    </sharingReasons>
</CustomObject>